--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,21 +2,27 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'kotlin-parcelize'
-    id 'androidx.navigation.safeargs'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
     compileSdk 33
 
+    def localProperties = new Properties()
+    localProperties.load(new FileInputStream(rootProject.file("local.properties")))
+
     defaultConfig {
         applicationId "com.shamardn.android.marvelcomics"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "API_KEY", localProperties['ApiKey']
+        buildConfigField "String", "BASE_URL", localProperties['BaseUrl']
+        buildConfigField "String", "PRIVATE_KEY", localProperties['PrivateKey']
     }
 
     buildTypes {
@@ -32,8 +38,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.2.0-alpha08'
+    }
     buildFeatures{
         dataBinding true
+    }
+    kapt {
+        correctErrorTypes true
     }
 }
 
@@ -42,33 +57,62 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+//
+//    implementation 'com.github.bumptech.glide:glide:4.14.2'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+//
+//    def lottieVersion = "5.2.0"
+//    implementation "com.airbnb.android:lottie:$lottieVersion"
+//
+//    def nav_version = "2.5.3"
+//    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+//    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+//
+//
+//
+//    // Room database
+//    implementation "androidx.room:room-runtime:2.4.3"
+//    implementation "androidx.room:room-ktx:2.4.3"
+//    kapt "androidx.room:room-compiler:2.5.0-beta02"
 
-    implementation "androidx.activity:activity-ktx:1.5.1"
-    implementation "androidx.fragment:fragment-ktx:1.5.2"
+    // Retrofit
+    def retrofit_version = '2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+//     Navigation
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    // Viewmodel
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    // Coil
+    implementation "io.coil-kt:coil-compose:2.2.2"
+    // Hilt
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-compiler:2.44'
 
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation "androidx.compose.ui:ui:$compose_ui_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
+    implementation 'androidx.compose.material:material:1.3.1'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
-//    def lifecycle_version = "2.6.0-alpha02"
-//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-//    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    //navigation with compose
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+    
+    // Constraint Layout
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+    // ViewPager
+//    implementation 'com.google.accompanist:accompanist-pager:0.25.1'
+//Material Icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
 
-    def lottieVersion = "3.4.0"
-    implementation "com.airbnb.android:lottie:$lottieVersion"
-
-    def nav_version = "2.5.1"
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
