--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -105,6 +106,9 @@ dependencies {
 
     //navigation with compose
     implementation "androidx.navigation:navigation-compose:$nav_version"
+
+    //okhttp3:logging-interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     
     // Constraint Layout
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
