--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,6 @@ android {
 }
 
 dependencies {
-
-
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
@@ -63,19 +61,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-//
-//    implementation 'com.github.bumptech.glide:glide:4.14.2'
-//    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
-//
-//    def lottieVersion = "5.2.0"
-//    implementation "com.airbnb.android:lottie:$lottieVersion"
-//
-//    def nav_version = "2.5.3"
-//    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-//    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-//
-//
-//
+
+
 //    // Room database
 //    implementation "androidx.room:room-runtime:2.4.3"
 //    implementation "androidx.room:room-ktx:2.4.3"
@@ -119,4 +106,10 @@ dependencies {
 //Material Icons
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
 
+    // Material 3
+    implementation("androidx.compose.material3:material3:1.0.1")
+    implementation("androidx.compose.material3:material3-window-size-class:1.0.1")
+
+    //splashscreen
+    implementation 'androidx.core:core-splashscreen:1.0.0'
 }
