--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,4 +112,7 @@ dependencies {
 
     //splashscreen
     implementation 'androidx.core:core-splashscreen:1.0.0'
+
+    //lottie
+    implementation "com.airbnb.android:lottie-compose:5.2.0"
 }
